--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -45,7 +45,8 @@
             </span>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#showproduct" aria-expanded="false" aria-controls="ui-basic">
+            <a class="nav-link" data-toggle="collapse" href="#showproduct" aria-expanded="false"
+               aria-controls="ui-basic">
                 <i class="mdi mdi-monitor menu-icon"></i>
                 <span class="menu-title">Product</span>
                 <i class="menu-arrow"></i>
@@ -53,10 +54,10 @@
             <div class="collapse" id="showproduct">
                 <ul class="nav flex-column sub-menu">
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/ui-features/buttons.html">Product</a>
+                        <a class="nav-link" th:href="@{/admin/product/brand}">Product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/ui-features/dropdowns.html">Brand</a>
+                        <a class="nav-link" th:href="@{/admin/product/brand}">Brand</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pages/ui-features/dropdowns.html">Promotion</a>
