--- a/webBanTiVi/src/main/resources/templates/admin/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_navbar.html
@@ -1,115 +1,101 @@
-<nav class="navbar col-lg-12 col-12 p-lg-0 fixed-top d-flex flex-row">
-    <div class="navbar-menu-wrapper d-flex align-items-stretch justify-content-between">
-        <a class="navbar-brand brand-logo-mini align-self-center d-lg-none" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
-        <button class="navbar-toggler navbar-toggler align-self-center mr-2" type="button" data-toggle="minimize">
-            <i class="mdi mdi-menu"></i>
-        </button>
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
-                    <i class="mdi mdi-bell-outline"></i>
-                    <span class="count count-varient1">7</span>
-                </a>
-                <div class="dropdown-menu navbar-dropdown navbar-dropdown-large preview-list" aria-labelledby="notificationDropdown">
-                    <h6 class="p-3 mb-0 ">Notifications</h6>
-                    <a class="dropdown-item preview-item">
-                        <div class="preview-thumbnail">
-                            <img src="assets/images/faces/face4.jpg" alt="" class="profile-pic">
-                        </div>
-                        <div class="preview-item-content">
-                            <p class="mb-0">Dany Miles <span class="text-small text-muted">commented on your photo</span></p>
-                        </div>
-                    </a>
-                    <a class="dropdown-item preview-item">
-                        <div class="preview-thumbnail">
-                            <img src="assets/images/faces/face3.jpg" alt="" class="profile-pic">
-                        </div>
-                        <div class="preview-item-content">
-                            <p class="mb-0">James <span class="text-small text-muted">posted a photo on your wall</span></p>
-                        </div>
-                    </a>
-                    <a class="dropdown-item preview-item">
-                        <div class="preview-thumbnail">
-                            <img src="assets/images/faces/face2.jpg" alt="" class="profile-pic">
-                        </div>
-                        <div class="preview-item-content">
-                            <p class="mb-0">Alex <span class="text-small text-muted">just mentioned you in his post</span></p>
-                        </div>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <p class="p-3 mb-0 ">View all activities</p>
-                </div>
+<nav
+        class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
+        id="layout-navbar"
+>
+    <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+        <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
+            <i class="bx bx-menu bx-sm"></i>
+        </a>
+    </div>
+
+    <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
+        <!-- Search -->
+        <div class="navbar-nav align-items-center">
+            <div class="nav-item d-flex align-items-center">
+                <i class="bx bx-search fs-4 lh-0"></i>
+                <input
+                        type="text"
+                        class="form-control border-0 shadow-none"
+                        placeholder="Search..."
+                        aria-label="Search..."
+                />
+            </div>
+        </div>
+        <!-- /Search -->
+
+        <ul class="navbar-nav flex-row align-items-center ms-auto">
+            <!-- Place this tag where you want the button to render. -->
+            <li class="nav-item lh-1 me-3">
+                <a
+                        class="github-button"
+                        href="https://github.com/themeselection/sneat-html-admin-template-free"
+                        data-icon="octicon-star"
+                        data-size="large"
+                        data-show-count="true"
+                        aria-label="Star themeselection/sneat-html-admin-template-free on GitHub"
+                >Star</a
+                >
             </li>
-            <li class="nav-item dropdown d-none d-sm-flex">
-                <a class="nav-link count-indicator dropdown-toggle" id="messageDropdown" href="#" data-toggle="dropdown">
-                    <i class="mdi mdi-email-outline"></i>
-                    <span class="count  count-varient2">5</span>
-                </a>
-                <div class="dropdown-menu navbar-dropdown navbar-dropdown-large preview-list" aria-labelledby="messageDropdown">
-                    <h6 class="p-3 mb-0 ">Messages</h6>
-                    <a class="dropdown-item preview-item">
-                        <div class="preview-item-content flex-grow">
-                            <span class="badge badge-pill badge-success">Request</span>
-                            <p class="text-small text-muted ellipsis mb-0"> Suport needed for user123 </p>
-                        </div>
-                        <p class="text-small text-muted align-self-start">4:10 PM</p>
-                    </a>
-                    <a class="dropdown-item preview-item">
-                        <div class="preview-item-content flex-grow">
-                            <span class="badge badge-pill badge-warning">Invoices</span>
-                            <p class="text-small text-muted ellipsis mb-0"> Invoice for order is mailed </p>
-                        </div>
-                        <p class="text-small text-muted align-self-start">4:10 PM</p>
-                    </a>
-                    <a class="dropdown-item preview-item">
-                        <div class="preview-item-content flex-grow">
-                            <span class="badge badge-pill badge-danger">Projects</span>
-                            <p class="text-small text-muted ellipsis mb-0"> New project will start tomorrow </p>
-                        </div>
-                        <p class="text-small text-muted align-self-start">4:10 PM</p>
-                    </a>
-                    <h6 class="p-3 mb-0 ">See all activity</h6>
-                </div>
-            </li>
-            <li class="nav-item nav-search border-0 ml-1 ml-md-3 ml-lg-5 d-none d-md-flex">
-                <form class="nav-link form-inline mt-2 mt-md-0">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                        <div class="input-group-append">
-              <span class="input-group-text">
-                <i class="mdi mdi-magnify"></i>
-              </span>
-                        </div>
+
+            <!-- User -->
+            <li class="nav-item navbar-dropdown dropdown-user dropdown">
+                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                    <div class="avatar avatar-online">
+                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
                     </div>
-                </form>
-            </li>
-        </ul>
-        <ul class="navbar-nav navbar-nav-right ml-lg-auto">
-            <li class="nav-item dropdown d-none d-xl-flex border-0">
-                <a class="nav-link dropdown-toggle" id="languageDropdown" href="#" data-toggle="dropdown">
-                    <i class="mdi mdi-earth"></i> English </a>
-                <div class="dropdown-menu navbar-dropdown" aria-labelledby="languageDropdown">
-                    <a class="dropdown-item" href="#"> French </a>
-                    <a class="dropdown-item" href="#"> Spain </a>
-                    <a class="dropdown-item" href="#"> Latin </a>
-                    <a class="dropdown-item" href="#"> Japanese </a>
-                </div>
-            </li>
-            <li class="nav-item  nav-profile dropdown border-0">
-                <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown">
-                    <img class="nav-profile-img mr-2" alt="" src="assets/images/faces/face1.jpg">
-                    <span class="profile-name">Henry Klein</span>
                 </a>
-                <div class="dropdown-menu navbar-dropdown w-100" aria-labelledby="profileDropdown">
-                    <a class="dropdown-item" href="#">
-                        <i class="mdi mdi-cached mr-2 text-success"></i> Activity Log </a>
-                    <a class="dropdown-item" href="#">
-                        <i class="mdi mdi-logout mr-2 text-primary"></i> Signout </a>
-                </div>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li>
+                        <a class="dropdown-item" href="#">
+                            <div class="d-flex">
+                                <div class="flex-shrink-0 me-3">
+                                    <div class="avatar avatar-online">
+                                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                                    </div>
+                                </div>
+                                <div class="flex-grow-1">
+                                    <span class="fw-semibold d-block">John Doe</span>
+                                    <small class="text-muted">Admin</small>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">
+                            <i class="bx bx-user me-2"></i>
+                            <span class="align-middle">My Profile</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">
+                            <i class="bx bx-cog me-2"></i>
+                            <span class="align-middle">Settings</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">
+                        <span class="d-flex align-items-center align-middle">
+                          <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
+                          <span class="flex-grow-1 align-middle">Billing</span>
+                          <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
+                        </span>
+                        </a>
+                    </li>
+                    <li>
+                        <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="auth-login-basic.html">
+                            <i class="bx bx-power-off me-2"></i>
+                            <span class="align-middle">Log Out</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
+            <!--/ User -->
         </ul>
-        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-            <span class="mdi mdi-menu"></span>
-        </button>
     </div>
 </nav>
