--- a/webBanTiVi/src/main/resources/templates/admin/layout.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout.html
@@ -21,7 +21,7 @@
 <body>
 <div class="container-scroller">
 
-    <nav th:replace="~{/admin/layout/_sidebar.html}">
+    <nav th:replace="~{/admin/layout/leftbar.html}">
     </nav>
     <div class="container-fluid page-body-wrapper">
         <div id="theme-settings" class="settings-panel">
