--- a/webBanTiVi/src/main/resources/templates/admin/layout.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      class="light-style layout-menu-fixed"
+      dir="ltr"
+      xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
     <meta
@@ -12,7 +15,7 @@
     <meta name="description" content=""/>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/admin/assets/img/favicon/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" th:href="@{/admin/assets/img/favicon/favicon.ico}"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -23,24 +26,24 @@
     />
 
     <!-- Icons. Uncomment required icon fonts -->
-    <link rel="stylesheet" href="/admin/assets/vendor/fonts/boxicons.css"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/vendor/fonts/boxicons.css}"/>
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="/admin/assets/vendor/css/core.css" class="template-customizer-core-css"/>
-    <link rel="stylesheet" href="/admin/assets/vendor/css/theme-default.css" class="template-customizer-theme-css"/>
-    <link rel="stylesheet" href="/admin/assets/css/demo.css"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/vendor/css/core.css}" class="template-customizer-core-css"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/vendor/css/theme-default.css}" class="template-customizer-theme-css"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/css/demo.css}"/>
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css}"/>
 
     <!-- Page CSS -->
 
     <!-- Helpers -->
-    <script src="/admin/assets/vendor/js/helpers.js"></script>
+    <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="/admin/assets/js/config.js"></script>
+    <script th:src="@{/admin/assets/js/config.js}"></script>
 </head>
 <body>
 <div class="layout-wrapper layout-content-navbar">
@@ -52,7 +55,10 @@
             <div th:replace="~{/admin/layout/_navbar.html}">
             </div>
             <div class="content-wrapper">
-                <div th:replace="~{${session.pageView}}"></div>
+                <div class="container-xxl flex-grow-1 container-p-y">
+                    <div th:replace="~{${session.pageView}}"></div>
+                </div>
+
                 <div th:replace="~{/admin/layout/_footer.html}"></div>
                 <div class="content-backdrop fade"></div>
             </div>
@@ -61,24 +67,24 @@
     </div>
     <div class="layout-overlay layout-menu-toggle"></div>
 </div>
-<script src="/admin/assets/vendor/libs/jquery/jquery.js"></script>
-<script src="/admin/assets/vendor/libs/popper/popper.js"></script>
-<script src="/admin/assets/vendor/js/bootstrap.js"></script>
-<script src="/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+<script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>
+<script th:src="@{/admin/assets/vendor/libs/popper/popper.js}"></script>
+<script th:src="@{/admin/assets/vendor/js/bootstrap.js}"></script>
+<script th:src="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js}"></script>
 
-<script src="/admin/assets/vendor/js/menu.js"></script>
+<script th:src="@{/admin/assets/vendor/js/menu.js}"></script>
 <!-- endbuild -->
 
 <!-- Vendors JS -->
-<script src="/admin/assets/vendor/libs/apex-charts/apexcharts.js"></script>
+<script th:src="@{/admin/assets/vendor/libs/apex-charts/apexcharts.js}"></script>
 
 <!-- Main JS -->
-<script src="/admin/assets/js/main.js"></script>
+<script th:src="@{/admin/assets/js/main.js}"></script>
 
 <!-- Page JS -->
-<script src="/admin/assets/js/dashboards-analytics.js"></script>
+<script th:src="@{/admin/assets/js/dashboards-analytics.js}"></script>
 
 <!-- Place this tag in your head or just before your close body tag. -->
-<script async defer src="https://buttons.github.io/buttons.js"></script>
+<script async defer th:src="@{https://buttons.github.io/buttons.js}"></script>
 </body>
 </html>
