--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -1,6 +1,6 @@
 <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
     <div class="app-brand demo">
-        <a href="index.html" class="app-brand-link">
+        <a href="layout.html" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <svg
                         width="25"
@@ -119,7 +119,6 @@
                 <div data-i18n="Authentications">Order</div>
             </a>
         </li>
-<<<<<<< HEAD
         <li class="menu-item">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-cube-alt"></i>
@@ -137,7 +136,6 @@
                     </a>
                 </li>
             </ul>
-=======
         <li class="nav-item">
             <div role="separator" class="dropdown-divider"></div>
             <span class="nav-link">
@@ -164,7 +162,6 @@
                     </li>
                 </ul>
             </div>
->>>>>>> origin/main
         </li>
         <!-- Components -->
         <li class="menu-header small text-uppercase"><span class="menu-header-text">Components</span></li>
