--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -82,7 +82,7 @@
         </li>
         <li class="menu-item">
             <a th:href="@{/admin/statistic}" class="menu-link">
-                <i class=' menu-icon tf-icons bx bx-bar-chart-alt' ></i>
+                <i class=' menu-icon tf-icons bx bx-bar-chart-alt'></i>
                 <div data-i18n="Statistics">Statistic</div>
             </a>
         </li>
@@ -97,18 +97,58 @@
             </a>
             <ul class="menu-sub">
                 <li class="menu-item">
-                    <a href="pages-account-settings-account.html" class="menu-link">
-                        <div data-i18n="Account">Account</div>
+                    <a th:href="@{/admin/staff}" class="menu-link">
+                        <div data-i18n="Account">Staff</div>
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="pages-account-settings-notifications.html" class="menu-link">
-                        <div data-i18n="Notifications">Notifications</div>
+                    <a th:href="@{/admin/product}" class="menu-link">
+                        <div data-i18n="Account">Product</div>
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="pages-account-settings-connections.html" class="menu-link">
-                        <div data-i18n="Connections">Connections</div>
+                    <a th:href="@{/admin/product/brand}" class="menu-link">
+                        <div data-i18n="Account">Brand</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/product/guarantee}" class="menu-link">
+                        <div data-i18n="Account">Guarantee</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/product/origin}" class="menu-link">
+                        <div data-i18n="Account">Origin</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/product/manufacturer}" class="menu-link">
+                        <div data-i18n="Account">Manufacturer</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/product/color}" class="menu-link">
+                        <div data-i18n="Account">Color</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/product/category}" class="menu-link">
+                        <div data-i18n="Notifications">Category</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/product/resolution}" class="menu-link">
+                        <div data-i18n="Account">Resolution</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/product/size}" class="menu-link">
+                        <div data-i18n="Connections">Size</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/product/image}" class="menu-link">
+                        <div data-i18n="Connections">Image</div>
                     </a>
                 </li>
             </ul>
