--- a/webBanTiVi/src/main/resources/templates/admin/page/guarantee.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/guarantee.html
@@ -5,16 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-
 <div class="container-xxl flex-grow-1 container-p-y">
-    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span> Brand Layouts</h4>
+    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span> Guarantee Layouts</h4>
 
     <!-- Basic Layout -->
     <div class="row">
         <div class="col-xl">
             <div class="card mb-4">
                 <div class="card-header d-flex justify-content-between align-items-center">
-                    <h5 class="mb-0">Brand Layout</h5>
+                    <h5 class="mb-0">Guarantee Layout</h5>
                     <small class="text-muted float-end">Default label</small>
                 </div>
                 <div class="card-body">
@@ -31,6 +30,10 @@
                             <label class="form-label" for="basic-default-name">Name</label>
                             <input type="text" class="form-control" id="basic-default-name" placeholder="name?">
                         </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="basic-default-year">Year</label>
+                            <input type="date" class="form-control" id="basic-default-year" placeholder="year?">
+                        </div>
                         <button type="submit" class="btn btn-primary">Save</button>
                     </form>
                 </div>
@@ -38,7 +41,7 @@
         </div>
         <div class="col-xl">
             <div class="card">
-                <h5 class="card-header">Table Brand</h5>
+                <h5 class="card-header">Table Guarantee</h5>
                 <div class="table-responsive text-nowrap">
                     <table class="table">
                         <thead>
