--- a/webBanTiVi/src/main/resources/templates/admin/page/staff.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/staff.html
@@ -5,6 +5,129 @@
     <title>Title</title>
 </head>
 <body>
-
+<h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span> Staff Layouts</h4>
+<div class="col-12">
+    <div class="card">
+        <div class="container-xxl flex-grow-1 container-p-y">
+            <h3>STAFF</h3>
+            <form action="/product/index" style="margin-top: 30px;" modelAttribute="product">
+                <div class="mb-3 row">
+                    <label for="html5-text-input" class="col-md-2 col-form-label">Id</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" value="Sneat" id="html5-text-input">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="html5-text-input" class="col-md-2 col-form-label">Code</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" value="Sneat" id="html5-text-input">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="html5-text-input" class="col-md-2 col-form-label">Last Name</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" value="Sneat" id="html5-text-input">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="html5-text-input" class="col-md-2 col-form-label">Middle Name</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" value="Sneat" id="html5-text-input">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="html5-text-input" class="col-md-2 col-form-label">First Name</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" value="Sneat" id="html5-text-input">
+                    </div>
+                </div>
+                <div class="row gy-3">
+                    <div class="col-md">
+                        <label for="name" class="mb-1">Gender</label>
+                        <div class="form-check form-check-inline mt-3" style="padding-left: 165px">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                   value="option1">
+                            <label class="form-check-label" for="inlineRadio1">Male</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                   value="option2">
+                            <label class="form-check-label" for="inlineRadio2">Female</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                                   value="option3" disabled="">
+                            <label class="form-check-label" for="inlineRadio3">Other (disabled)</label>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="mb-3 row">
+                    <label for="html5-date-input" class="col-md-2 col-form-label">Date</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="date" value="2021-06-18" id="html5-date-input">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="html5-text-input" class="col-md-2 col-form-label">Address</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" value="Sneat" id="html5-text-input">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="html5-tel-input" class="col-md-2 col-form-label">Phone</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="tel" value="90-(164)-188-556" id="html5-tel-input">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="html5-password-input" class="col-md-2 col-form-label">Password</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="password" value="password" id="html5-password-input">
+                    </div>
+                </div>
+                <div class="row gy-3">
+                    <div class="col-md">
+                        <label for="name" class="mb-1">Status</label>
+                        <div class="form-check form-check-inline mt-3" style="padding-left: 170px">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                   value="option1">
+                            <label class="form-check-label" for="inlineRadio1">Action</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                   value="option2">
+                            <label class="form-check-label" for="inlineRadio2">Inaction</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                                   value="option3" disabled="">
+                            <label class="form-check-label" for="inlineRadio3">Other (disabled)</label>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="mb-3 row">
+                    <label for="html5-password-input" class="col-md-2 col-form-label">Position</label>
+                    <div class="col-md-10">
+                        <select name="category" class="form-control  ">
+                            <option value="">----------</option>
+                            <c:forEach items="${category}" var="category">
+                                <option value="${category.id}" ${category.id==product.category.id ?
+                                'selected="selected"':''}>${category.name}</option>
+                            </c:forEach>
+                        </select>
+                    </div>
+                </div>
+                <div style="margin-top: 35px;">
+                    <button type="submit" class="btn btn-primary">
+                        Save
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<hr>
 </body>
 </html>
