--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -11,8 +11,8 @@
                 <div class="col-lg-6 col-md-5">
                     <div class="header__top__right">
                         <div class="header__top__links">
-                            <a href="#">Đăng nhập</a>
-                            <a href="#">Đăng ký</a>
+                            <a href="/login">Đăng nhập</a>
+                            <a href="/register">Đăng ký</a>
                         </div>
                         <div class="header__top__hover">
                             <span>Ngôn Ngữ</span>
