--- a/webBanTiVi/src/main/resources/templates/user/page/shop.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/shop.html
@@ -205,7 +205,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="product__item">
-                            <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
+                            <div class="product__item__pic set-bg" data-setbg="/user/img/product/product-2.jpg">
                                 <ul class="product__hover">
                                     <li><a href="#"><img src="/user/img/icon/heart.png" alt=""></a></li>
                                     <li><a href="#"><img src="/user/img/icon/compare.png" alt=""> <span>Compare</span></a>
