--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -37,13 +37,13 @@
                 <nav class="header__menu mobile-menu">
                     <ul>
                         <li class="active"><a href="/">Trang chủ</a></li>
-                        <li><a href="/product">Trang sản phẩm</a></li>
+                        <li><a href="/shop">Trang sản phẩm</a></li>
                         <li><a href="/promotion">CTKM</a></li>
                         <li><a href="#">Thông tin</a>
                             <ul class="dropdown">
                                 <li><a href="./about.html">Trang giới thiệu</a></li>
                                 <li><a href="./shop-details.html">Thẻ thành viên</a></li>
-                                <li><a href="./shopping-cart.html">Các chính sách</a></li>
+                                <li><a href="/shopping-cart">Các chính sách</a></li>
                                 <li><a href="./checkout.html">Tuyển dụng</a></li>
                                 <li><a href="./blog-details.html">Tin tức</a></li>
                                 <li><a href="./blog-details.html">Liên hệ</a></li>
@@ -53,7 +53,7 @@
                             <ul class="dropdown">
                                 <li><a href="./about.html">Đăng nhập</a></li>
                                 <li><a href="./shop-details.html">Đăng ký</a></li>
-                                <li><a href="./shopping-cart.html">Tra cứu hóa đơn</a></li>
+                                <li><a href="/shopping-cart">Tra cứu hóa đơn</a></li>
                                 <li><a href="./checkout.html">Đổi hàng</a></li>
                                 <li><a href="./blog-details.html">Trả hàng</a></li>
                             </ul>
