--- a/webBanTiVi/src/main/resources/templates/user/page/lookuporder.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/lookuporder.html
@@ -1,4 +1,4 @@
-<section>
+<section class="container">
 <div class="card mb-4">
     <div class="card-header d-flex justify-content-between align-items-center">
         <h5 class="mb-0">Look Up Orders</h5>
