--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -96,11 +96,11 @@
                 <div data-i18n="Product">Product</div>
             </a>
             <ul class="menu-sub">
-                <li class="menu-item">
-                    <a th:href="@{/admin/staff}" class="menu-link">
-                        <div data-i18n="Account">Staff</div>
-                    </a>
-                </li>
+<!--                <li class="menu-item">-->
+<!--                    <a th:href="@{/admin/staff}" class="menu-link">-->
+<!--                        <div data-i18n="Account">Staff</div>-->
+<!--                    </a>-->
+<!--                </li>-->
                 <li class="menu-item">
                     <a th:href="@{/admin/product}" class="menu-link">
                         <div data-i18n="Account">Product</div>
@@ -152,6 +152,12 @@
                     </a>
                 </li>
             </ul>
+        </li>
+        <li class="menu-item">
+            <a th:href="@{/admin/staff}" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-receipt"></i>
+                <div data-i18n="order">Staff</div>
+            </a>
         </li>
         <li class="menu-item">
             <a th:href="@{/admin/order}" class="menu-link">
