manh up view order, return_product

--- a/webBanTiVi/src/main/resources/templates/user/layout.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet"  th:href="@{/user/css/owl.carousel.min.css}" type="text/css">
     <link rel="stylesheet"  th:href="@{/user/css/slicknav.min.css}" type="text/css">
     <link rel="stylesheet"  th:href="@{/user/css/style.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/user/css/_order/_order_processing.css}">
+    <link rel="stylesheet" th:href="@{/user/css/_order/_order_completed.css}">
+    <link rel="stylesheet" th:href="@{/user/css/_order/_order_return.css}">
+
 
     <style>
         #main{
