--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -155,19 +155,19 @@
         </li>
         <li class="menu-item">
             <a th:href="@{/admin/staff}" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-receipt"></i>
+                <i class="menu-icon tf-icons bx bx-user-pin"></i>
                 <div data-i18n="order">Staff</div>
             </a>
         </li>
         <li class="menu-item">
             <a th:href="@{/admin/order}" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-receipt"></i>
+                <i class="menu-icon tf-icons bx bxs-cart-add"></i>
                 <div data-i18n="order">Order</div>
             </a>
         </li>
         <li class="menu-item">
             <a th:href="@{/admin/customer}" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-receipt"></i>
+                <i class="menu-icon tf-icons bx bx-user-circle"></i>
                 <div data-i18n="customer">Customer</div>
             </a>
         </li>
