oanh sửa lỗi select2 không hiện option

--- a/webBanTiVi/src/main/resources/templates/admin/page/directSales.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/directSales.html
@@ -312,7 +312,7 @@
                                                     <div class="col-md-5 mb-xl-3 mb-3">
                                                         <label class="form-label" for="selectGender">Gender</label>
                                                         <div class="input-group input-group-merge">
-                                                            <select class="select2-gender form-control"
+                                                            <select class="form-select form-control"
                                                                     style="width: 100%;" id="selectGender">
                                                                 <option value="HN">Male</option>
                                                                 <option value="NB">Female</option>
