--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -68,7 +68,7 @@
     <ul class="menu-inner py-1">
         <!-- Dashboard -->
         <li class="menu-item active">
-            <a th:href="@{/admin/dashboard1}" class="menu-link">
+            <a th:href="@{/admin/dashboard}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-home-circle"></i>
                 <div data-i18n="Analytics">Dashboard</div>
             </a>
@@ -81,7 +81,7 @@
         </li>
         <li class="menu-item">
             <a th:href="@{/admin/statistic}" class="menu-link">
-                <i class=' menu-icon tf-icons bx bx-bar-chart-alt' ></i>
+                <i class=' menu-icon tf-icons bx bx-bar-chart-alt'></i>
                 <div data-i18n="Statistics">Statistic</div>
             </a>
         </li>
@@ -95,11 +95,6 @@
                 <div data-i18n="Product">Product</div>
             </a>
             <ul class="menu-sub">
-<!--                <li class="menu-item">-->
-<!--                    <a th:href="@{/admin/staff}" class="menu-link">-->
-<!--                        <div data-i18n="Account">Staff</div>-->
-<!--                    </a>-->
-<!--                </li>-->
                 <li class="menu-item">
                     <a th:href="@{/admin/product}" class="menu-link">
                         <div data-i18n="Account">Product</div>
@@ -160,15 +155,28 @@
         </li>
         <li class="menu-item">
             <a th:href="@{/admin/order}" class="menu-link">
-                <i class="menu-icon tf-icons bx bxs-cart-add"></i>
+                <i class="menu-icon tf-icons bx bx-receipt"></i>
                 <div data-i18n="order">Order</div>
             </a>
         </li>
         <li class="menu-item">
-            <a th:href="@{/admin/customer}" class="menu-link">
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-user-circle"></i>
-                <div data-i18n="customer">Customer</div>
+                <div data-i18n="Product">Customer</div>
             </a>
+            <ul class="menu-sub">
+                <li class="menu-item">
+                    <a th:href="@{/admin/customer}" class="menu-link">
+                        <div data-i18n="list customer">List customer</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/chat}" class="menu-link">
+                        <div data-i18n="chat">Chat with customer</div>
+                    </a>
+                </li>
+            </ul>
         </li>
+
     </ul>
 </aside>
