sua loi do cho thang oanh

--- a/webBanTiVi/src/main/resources/templates/admin/page/product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">UI elements /</span> Product</h4>
 
@@ -15,25 +8,25 @@
                 <h5 class="card-header">Basic Badges</h5>
                 <div class="card-body">
                     <div class="mb-3 row">
-                        <label for="html5-text-input" class="col-md-2 col-form-label">Id</label>
+                        <label class="col-md-2 col-form-label">Id</label>
                         <div class="col-md-10">
-                            <input class="form-control" type="text" placeholder="id" id="html5-text-input">
+                            <input class="form-control" type="text" placeholder="id" id="html5-text-input1">
                         </div>
                     </div>
                     <div class="mb-3 row">
-                        <label for="html5-text-input" class="col-md-2 col-form-label">Code</label>
+                        <label class="col-md-2 col-form-label">Code</label>
                         <div class="col-md-10">
-                            <input class="form-control" type="text" placeholder="code" id="html5-text-input">
+                            <input class="form-control" type="text" placeholder="code" id="html5-text-input2">
                         </div>
                     </div>
                     <div class="mb-3 row">
-                        <label for="html5-text-input" class="col-md-2 col-form-label">Name</label>
+                        <label class="col-md-2 col-form-label">Name</label>
                         <div class="col-md-10">
-                            <input class="form-control" type="text" placeholder="name" id="html5-text-input">
+                            <input class="form-control" type="text" placeholder="name" id="html5-text-input3">
                         </div>
                     </div>
                     <div class="mb-3 row">
-                        <label for="html5-text-input" class="col-md-2 col-form-label">Price</label>
+                        <label class="col-md-2 col-form-label">Price</label>
                         <div class="col">
                             <input class="form-control" type="text" placeholder="Import" aria-label="First name">
                         </div>
@@ -42,7 +35,7 @@
                         </div>
                     </div>
                     <div class="mb-3 row">
-                        <label for="html5-text-input" class="col-md-2 col-form-label">Quantity</label>
+                        <label class="col-md-2 col-form-label">Quantity</label>
                         <div class="col-md-10">
                             <input class="form-control" type="number" value="18" id="html5-number-input">
                         </div>
@@ -81,17 +74,12 @@
                         <div class="col-lg-6 col-md-3">
                             <small class="text-light fw-semibold">Backdrop</small>
                             <div class="mt-3">
-                                <!-- Button trigger modal -->
-                                <!--                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"-->
-                                <!--                                        data-bs-target="#backDropModal">-->
-                                <!--                                    Brand-->
-                                <!--                                </button>-->
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                             data-bs-target="#backDropModal">
                                         Brand
                                     </button>
-                                    <select class="form-select" id="inputGroupSelect03"
+                                    <select class="form-select"
                                             aria-label="Example select with button addon">
                                         <option selected="">Choose...</option>
                                         <option value="1">One</option>
@@ -100,12 +88,12 @@
                                     </select>
                                 </div>
                                 <!-- Modal -->
-                                <div class="modal fade" id="backDropModal" data-bs-backdrop="static" tabindex="-1"
+                                <div class="modal fade" data-bs-backdrop="static" tabindex="-1"
                                      style="display: none;" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <form class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="backDropModalTitle">Modal title</h5>
+                                                <h5 class="modal-title">Modal title</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
@@ -113,19 +101,19 @@
                                                 <div class="row">
                                                     <div class="col mb-3">
                                                         <label for="nameBackdrop" class="form-label">Name</label>
-                                                        <input type="text" id="nameBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Name">
                                                     </div>
                                                 </div>
                                                 <div class="row g-2">
                                                     <div class="col mb-0">
                                                         <label for="emailBackdrop" class="form-label">ID</label>
-                                                        <input type="text" id="idBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="ID">
                                                     </div>
                                                     <div class="col mb-0">
                                                         <label for="dobBackdrop" class="form-label">Code</label>
-                                                        <input type="text" id="codebBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Code">
                                                     </div>
                                                 </div>
@@ -151,7 +139,7 @@
                                             data-bs-target="#backDropModal">
                                         Guarantee
                                     </button>
-                                    <select class="form-select" id="inputGroupSelect03"
+                                    <select class="form-select"
                                             aria-label="Example select with button addon">
                                         <option selected="">Choose...</option>
                                         <option value="1">One</option>
@@ -160,7 +148,7 @@
                                     </select>
                                 </div>
                                 <!-- Modal -->
-                                <div class="modal fade" id="backDropModal" data-bs-backdrop="static" tabindex="-1"
+                                <div class="modal fade" data-bs-backdrop="static" tabindex="-1"
                                      style="display: none;" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <form class="modal-content">
@@ -627,5 +615,3 @@
     </div>
 </div>
 <hr>
-</body>
-</html>
